...
                        <rect key="frame" x="257" y="162" width="60" height="12"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="12" id="K8M-Wk-NYl"/>
                            <constraint firstAttribute="width" constant="60" id="Y5Q-hh-Str"/>
                        </constraints>
                    </imageView>
                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pin" translatesAutoresizingMaskIntoConstraints="NO" id="Arf-JC-T1z">
                        <rect key="frame" x="6" y="156" width="16" height="16"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="16" id="51q-xR-izZ"/>
                            <constraint firstAttribute="height" constant="16" id="atR-4p-ofp"/>
                        </constraints>
                    </imageView>
...
